[gd_scene load_steps=2 format=3 uid="uid://dvo0raixlpase"]

[ext_resource type="Script" path="res://_entry_scene.gd" id="1_ffy5h"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ffy5h")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -207.0
offset_bottom = 85.0
grow_horizontal = 0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="AngleLabel" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Угол"
horizontal_alignment = 1

[node name="AngleScroll" type="SpinBox" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 90.0
step = 0.5
value = 30.0

[node name="VSeparator2" type="VSeparator" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="1EnvLabel" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Абсолютный показатель преломления  
 первой среды (n₁)"
horizontal_alignment = 1

[node name="_1" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Slct" type="OptionButton" parent="Control/HBoxContainer/VBoxContainer/_1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Пользовательский"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Вакуум"
popup/item_1/id = 1
popup/item_2/text = "Воздух"
popup/item_2/id = 2
popup/item_3/text = "Вода"
popup/item_3/id = 3
popup/item_4/text = "Спирт"
popup/item_4/id = 4
popup/item_5/text = "Оптическое стекло"
popup/item_5/id = 5
popup/item_6/text = "Кварц"
popup/item_6/id = 6

[node name="SpinBox" type="SpinBox" parent="Control/HBoxContainer/VBoxContainer/_1"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.0

[node name="2EnvLabel" type="Label" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Абсолютный показатель преломления  
 второй среды (n₂)"
horizontal_alignment = 1

[node name="_2" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Slct" type="OptionButton" parent="Control/HBoxContainer/VBoxContainer/_2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Пользовательский"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Вакуум"
popup/item_1/id = 1
popup/item_2/text = "Воздух"
popup/item_2/id = 2
popup/item_3/text = "Вода"
popup/item_3/id = 3
popup/item_4/text = "Спирт"
popup/item_4/id = 4
popup/item_5/text = "Оптическое стекло"
popup/item_5/id = 5
popup/item_6/text = "Кварц"
popup/item_6/id = 6

[node name="SpinBox" type="SpinBox" parent="Control/HBoxContainer/VBoxContainer/_2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.0

[node name="HSeparator" type="HSeparator" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Control" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Control"]
layout_mode = 2
offset_right = 524.0
offset_bottom = 474.0

[node name="HSeparator" type="HSeparator" parent="Control/Control/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Control/Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
text = "Обработка...
"

[connection signal="value_changed" from="Control/HBoxContainer/VBoxContainer/AngleScroll" to="." method="_on_angle_box_value_changed"]
[connection signal="item_selected" from="Control/HBoxContainer/VBoxContainer/_1/Slct" to="." method="_on_slct_item_selected" binds= [1]]
[connection signal="value_changed" from="Control/HBoxContainer/VBoxContainer/_1/SpinBox" to="." method="_on_spin_box_value_changed" binds= [1]]
[connection signal="item_selected" from="Control/HBoxContainer/VBoxContainer/_2/Slct" to="." method="_on_slct_item_selected" binds= [2]]
[connection signal="value_changed" from="Control/HBoxContainer/VBoxContainer/_2/SpinBox" to="." method="_on_spin_box_value_changed" binds= [2]]
